--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>zero's HomePage</h1>It works.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Zero's Blog</title>
+</head>
+<body>
+<h1>Hello World!</h1>
+</body>
+</html>
